[package]
name = "api-signature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bs58 = "0.4.0"
crypto = "0.3.0"
hmac = "0.12.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.78"
sha2 = "0.10.1"

[dev-dependencies]
hex = "0.4.3"
